# job-chatbot-langchain

./: .gitignore  README.md  pyproject.toml
docs/: PRD.md  PRODUCT-DESIGN.md  README.md  SYSTEM-DESIGN.md  TESTING.md  UAT-PLAN.md  USER-MANUAL.md
src/job_chatbot_langchain/: __init__.py  graph.py  main.py  models.py  state.py
src/job_chatbot_langchain/agents/: __init__.py  company_confirm.py  db.py  scraper.py  tester.py
src/job_chatbot_langchain/tools/: __init__.py  storage.py  workday.py
tests/: test_smoke.py
