[project]
name = "job-chatbot-langchain"
version = "0.1.0"
description = "Multi-agent job-search chatbot built with LangChain and LangGraph"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Rashmi Mahadevaiah", email = "mahadevaiah.rashmi@gmail.com" },
]
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
job-chatbot-langchain = "job_chatbot_langchain.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_chatbot_langchain"]
